[TlahuicoleSystem]Cambios del 31 de mayo

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -32,7 +32,7 @@
 
     <nav class="navbar navbar-expand-md bg-danger navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">La Cultura</a>
+        <a class="navbar-brand" href="index.html">La Cultura</a>
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -63,15 +63,12 @@
                 </div>
                 <div class="col-md-4 text-right">
                     <div class="row carro">
-                        <div class="col-11">
-                            <p>Hola Josue</p>
+                        <div class="col-11" id="nombreNav">
                         </div>
                         <div class="col-1">
                             <i class="material-icons">&#xe8cc;</i>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
