--- a/front-end/procesarpedido/pago.html
+++ b/front-end/procesarpedido/pago.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactanos</title>
+    <title>La cultura</title>
+
     <!--Hojas de estilo propias-->
     <link rel="stylesheet" href="resources/css/style.css">
 
@@ -73,51 +75,38 @@
     </nav>
 
 
-    <div class="container">
-        <div class="cuadro">
-            <div class="card-group">
-                <div class="card">
-                    <h2>Queremos escucharte</h2>
-                    <form action="">
-                        <div class="form-group">
-                            <label for="nombre">Nombre:</label>
-                            <input type="text" class="form-control" id="nombre" placeholder="Nombre" name="nombre" required>
-
-                        </div>
-                        <div class="form-group">
-                            <label for="pwd">Apellidos:</label>
-                            <input type="text" class="form-control" id="apellidos" placeholder="Apellidos" name="apellidos" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="pwd">Correo:</label>
-                            <input type="text" class="form-control" id="correo" placeholder="ejemplo@dominio.com" name="correo" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="pwd">Telefono:</label>
-                            <input type="number" class="form-control" id="Telefono" placeholder="2519451111" name="telefono" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="comment">Mensaje:</label>
-                            <textarea class="form-control" rows="5" id="mensaje"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
-                    </form>
+    <!--contenedor para los productos-->
+    <div class="container-lg producto">
+        <br>
+        <h2>Finalizar Pedido</h2>
+        <form>
+            <div class=" cuadro">
+                <h3>Metodo de pago</h3>
+                <div class="form-group">
+                    <label for="nombre">Nombre y apellidos:</label>
+                    <input type="text" class="form-control" id="nombrept" placeholder="Josue Barrales" name="nombrept" required>
                 </div>
-                <div class="card">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4478.163464192762!2d-97.77204768014167!3d19.296642134104474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c5560deffce179%3A0x6654f289ea890152!2sPapeleria%20Y%20Novedades%20%22La%20Cultura%22!5e0!3m2!1ses!2smx!4v1646089876954!5m2!1ses!2smx"
-                        style="border:0;" allowfullscreen="" loading="lazy">
-                    </iframe>
-                    <br>
-                    <p>Papeleria Y Novedades "La Cultura"</p>
-                    <p><i class="material-icons">&#xe55e;</i> Tlahuicole 5 Barrio de Alta Luz Cuapiaxtla Tlaxcala</p>
-                    <p><i class="material-icons">&#xe8c5;</i> 2761163782</p>
-                    <p><i class="material-icons">&#xe0be;</i> laculturasat@gmail.com</p>
-
+                <div class="form-group">
+                    <label for="pwd">Numero de tarjeta:</label>
+                    <input type="number" class="form-control" id="tarjeta" placeholder="0000 0000 0000 0000" name="tarjeta" required>
+                </div>
+                <div class="form-group">
+                    <label for="pwd">Vencimiento:</label>
+                    <input type="text" class="form-control" id="vencimiento" placeholder="02/26" name="vencimiento" required>
+                </div>
+                <div class="form-group">
+                    <label for="pwd">Codigo de seguridad:</label>
+                    <input type="number" class="form-control" id="codigos" placeholder="123" name="codigos" required>
                 </div>
             </div>
-        </div>
-    </div>
+            <div class="text-center">
+                <button type="button" class="btn btn-success">Finalizar</button>
+            </div>
+            <br><br>
+        </form>
 
+    </div>
+    <!--Pie de pagina-->
     <footer>
         <div class="container-lg">
             <div class="row">
@@ -130,22 +119,22 @@
                 </div>
                 <div class="col-sm-3">
                     <h3>Enlaces</h3>
-                    <br>
-
-                    <p><i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a></p>
-                    <p><i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a></p>
-                    <p><i class="material-icons">&#xe7fb;</i><a href="contactanos.html">Contactanos</a></p>
-
+                    <p><i class="material-icons">&#xe88a;</i><a href="../index.html">Inicio</a> </p>
+                    <p><i class="material-icons">&#xe5c3;</i><a href="../productos/productos.html">Productos</a> </p>
+                    <p><i class="material-icons">&#xe7fb;</i><a href="../contactanos/contactanos.html">  Contactanos</a> </p>
                 </div>
             </div>
             <br>
             <br>
             <div class="derechos text-center">
-                <h5>&copy; 2022 La Cultura. Todos los derechos reservados.</h55>
+                <h5>&copy; 2022 La Cultura. Todos los derechos reservados.</h5>
             </div>
         </div>
 
     </footer>
+
+
+
 </body>
 
 </html>
