--- a/front-end/perfil/perfil.html
+++ b/front-end/perfil/perfil.html
@@ -27,33 +27,53 @@
     <!--Iconos-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <script src="assets/js/main.js"></script>
+
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-md bg-danger navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">La Cultura</a>
-
+        <a class="navbar-brand" href="../index.html">La Cultura</a>
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
-
         <!-- Navbar links -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../productos/productos.html">Productos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../login/registro.html">Registrarse</a>
-                </li>
-            </ul>
+            <div class="row w-100">
+                <div class="col-md-3">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../productos/productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../login/registro.html">Registrarse</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-5 ">
+                    <form class="form-inline text-right ">
+                        <input class="form-control" type="text" placeholder="Buscar productos...">
+                        <button class="btn" type="button"><i class="material-icons">&#xe163;</i></button>
+                    </form>
+
+                </div>
+                <div class="col-md-4 text-right">
+                    <div class="row carro">
+                        <div class="col-11" id="nombreNav">
+
+                        </div>
+                        <div class="col-1">
+                            <i class="material-icons">&#xe8cc;</i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </nav>
 
@@ -244,6 +264,7 @@
             </div>
         </div>
     </footer>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
