--- a/front-end/productos/producto.html
+++ b/front-end/productos/producto.html
@@ -27,7 +27,7 @@
     <!--Iconos-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <script src="resources/js/producto.js"></script>
+
 </head>
 
 <body>
@@ -40,17 +40,39 @@
         </button>
         <!-- Navbar links -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="productos.html">Productos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../login/registro.html">Registrarse</a>
-                </li>
-            </ul>
+            <div class="row w-100">
+                <div class="col-md-3">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../productos/productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../login/registro.html">Registrarse</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-5 ">
+                    <form class="form-inline text-right ">
+                        <input class="form-control" type="text" placeholder="Buscar productos...">
+                        <button class="btn" type="button"><i class="material-icons">&#xe163;</i></button>
+                    </form>
+
+                </div>
+                <div class="col-md-4 text-right">
+                    <div class="row carro">
+                        <div class="col-11" id="nombreNav">
+
+                        </div>
+                        <div class="col-1">
+                            <i class="material-icons">&#xe8cc;</i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </nav>
 
@@ -64,7 +86,6 @@
                 <div class="encabezado" id="encabezado">
 
                 </div>
-
                 <p>
                     <ul id="lista">
 
@@ -73,13 +94,13 @@
 
                     </ul>
                 </p>
-                <form action="../procesarpedido/procesar.html">
+                <form>
                     <div class="form-group">
                         <label for="comment">Cantidad:</label>
                         <input type="number" class="form-control" id="cantidad" placeholder="10" name="cantidad" required>
                     </div>
-                    <button type="submit" class="btn btn-primary">Comprar ahora</button>
-                    <button type="submit" class="btn btn-primary">Agregar al carrito</button>
+                    <button type="button" onclick="comprar();" class="btn btn-primary">Comprar ahora</button>
+                    <button type="button" onclick="carrito();" class="btn btn-primary">Agregar al carrito</button>
                 </form>
             </div>
         </div>
@@ -113,7 +134,7 @@
         </div>
 
     </footer>
-
+    <script src="resources/js/producto.js"></script>
 </body>
 
 </html>
