--- a/front-end/productos/productos.html
+++ b/front-end/productos/productos.html
@@ -27,8 +27,7 @@
     <!--Iconos-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <script src="resources/js/main.js">
-    </script>
+
 </head>
 
 <body>
@@ -41,17 +40,39 @@
         </button>
         <!-- Navbar links -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="productos.html">Productos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../login/registro.html">Registrarse</a>
-                </li>
-            </ul>
+            <div class="row w-100">
+                <div class="col-md-3">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../productos/productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../login/registro.html">Registrarse</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-5 ">
+                    <form class="form-inline text-right ">
+                        <input class="form-control" type="text" placeholder="Buscar productos...">
+                        <button class="btn" type="button"><i class="material-icons">&#xe163;</i></button>
+                    </form>
+
+                </div>
+                <div class="col-md-4 text-right">
+                    <div class="row carro">
+                        <div class="col-11" id="nombreNav">
+
+                        </div>
+                        <div class="col-1">
+                            <i class="material-icons">&#xe8cc;</i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </nav>
     <div class="jumbotron jumbotron-fluid ">
@@ -98,7 +119,7 @@
         </div>
 
     </footer>
-
+    <script src="resources/js/main.js"></script>
 </body>
 
 </html>
