--- a/front-end/perfil/perfil.html
+++ b/front-end/perfil/perfil.html
@@ -108,10 +108,6 @@
                                     <td>Correo:</td>
                                     <td>2191290@uatx.mx</td>
                                 </tr>
-                                <tr>
-                                    <td>Contraseña</td>
-                                    <td>**************</td>
-                                </tr>
                             </table>
                         </div>
                     </div>
@@ -120,70 +116,8 @@
                     <div class="h1">Compras</div>
                     <div class="table-responsive">
                         <table class="table table-dark table-hover">
-                            <tbody>
-                                <tr>
-                                    <td><img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid"></td>
-                                    <td>Libreta C.7</td>
-                                    <td>Libreta Profesional C.7</td>
-                                    <td>$899</td>
-                                    <td>
-                                        <a href="../productos/producto.html" class="btn btn-success"> Comprar</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid"></td>
-                                    <td>Libreta C.7</td>
-                                    <td>Libreta Profesional C.7</td>
-                                    <td>$899</td>
-                                    <td>
-                                        <a href="../productos/producto.html" class="btn btn-success"> Comprar</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid"></td>
-                                    <td>Libreta C.7</td>
-                                    <td>Libreta Profesional C.7</td>
-                                    <td>$899</td>
-                                    <td>
-                                        <a href="../productos/producto.html" class="btn btn-success"> Comprar</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid"></td>
-                                    <td>Libreta C.7</td>
-                                    <td>Libreta Profesional C.7</td>
-                                    <td>$899</td>
-                                    <td>
-                                        <a href="../productos/producto.html" class="btn btn-success"> Comprar</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid"></td>
-                                    <td>Libreta C.7</td>
-                                    <td>Libreta Profesional C.7</td>
-                                    <td>$899</td>
-                                    <td>
-                                        <a href="../productos/producto.html" class="btn btn-success"> Comprar</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid"></td>
-                                    <td>Libreta C.7</td>
-                                    <td>Libreta Profesional C.7</td>
-                                    <td>$899</td>
-                                    <td>
-                                        <a href="../productos/producto.html" class="btn btn-success"> Comprar</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><img src="http://drive.google.com/uc?export=view&id=1sy0gBjDyL5IXkRRLfWVMcfxpa9N8or8i" class="img-fluid"></td>
-                                    <td>Libreta C.7</td>
-                                    <td>Libreta Profesional C.7</td>
-                                    <td>$899</td>
-                                    <td>
-                                        <a href="../productos/producto.html" class="btn btn-success"> Comprar</a>
-                                    </td>
-                                </tr>
+                            <tbody id="contenido-2">
+
                             </tbody>
                         </table>
                     </div>
@@ -202,31 +136,9 @@
                                     <th>Status</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>52168</td>
-                                    <td>Libreta Profesional C.7, Cuaderno italiano</td>
-                                    <td>$35</td>
-                                    <td>Tlahuicole 5 Cuapiaxtla Tlaxcala</td>
-                                    <td>Tarjeta con terminación 5569</td>
-                                    <td>En proceso</td>
-                                </tr>
-                                <tr>
-                                    <td>52168</td>
-                                    <td>Libreta Profesional C.7, Cuaderno italiano</td>
-                                    <td>$35</td>
-                                    <td>Tlahuicole 5 Cuapiaxtla Tlaxcala</td>
-                                    <td>Tarjeta con terminación 5569</td>
-                                    <td>Enviado</td>
-                                </tr>
-                                <tr>
-                                    <td>52168</td>
-                                    <td>Libreta Profesional C.7, Cuaderno italiano</td>
-                                    <td>$35</td>
-                                    <td>Tlahuicole 5 Cuapiaxtla Tlaxcala</td>
-                                    <td>Tarjeta con terminación 5569</td>
-                                    <td>En proceso de entrega</td>
-                                </tr>
+                            <tbody id="contenido-3">
+
+
                             </tbody>
                         </table>
                     </div>
