--- a/front-end/contactanos/contactanos.html
+++ b/front-end/contactanos/contactanos.html
@@ -37,7 +37,7 @@
         <!-- Navbar links -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="row w-100">
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="../productos/productos.html">Productos</a>
@@ -51,11 +51,7 @@
                     </ul>
                 </div>
 
-                <div class="col-md-5 ">
-                    <form class="form-inline text-right ">
-                        <input class="form-control" type="text" placeholder="Buscar productos...">
-                        <button class="btn" type="button"><i class="material-icons">&#xe163;</i></button>
-                    </form>
+                <div class="col-md-4 ">
 
                 </div>
                 <div class="col-md-4 text-right">
@@ -64,7 +60,8 @@
 
                         </div>
                         <div class="col-1">
-                            <i class="material-icons">&#xe8cc;</i>
+                            <a href="../carrito/carrito.html">
+                                <i class="material-icons">&#xe8cc;</i></a>
                         </div>
                     </div>
                 </div>
