--- a/front-end/procesarpedido/procesarC.html
+++ b/front-end/procesarpedido/procesarC.html
@@ -199,7 +199,7 @@
     </footer>
 
 
-    <script src="resources/js/main.js"></script>
+    <script src="resources/js/procesarC.js"></script>
 </body>
 
 </html>
