--- a/front-end/login/registro.html
+++ b/front-end/login/registro.html
@@ -26,7 +26,7 @@
     <!--Iconos-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <script src="resources/JS/main.js"></script>
+
 </head>
 
 <body>
@@ -40,17 +40,36 @@
         </button>
         <!-- Navbar links -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../productos/productos.html">Productos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../login/registro.html">Registrarse</a>
-                </li>
-            </ul>
+            <div class="row w-100">
+                <div class="col-md-4">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../productos/productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../login/registro.html">Iniciar Sesion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../login/registro.html">Registrarse</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-4 ">
+
+                </div>
+                <div class="col-md-4 text-right">
+                    <div class="row carro">
+                        <div class="col-11" id="nombreNav">
+
+                        </div>
+                        <div class="col-1">
+                            <a href="../carrito/carrito.html">
+                                <i class="material-icons">&#xe8cc;</i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </nav>
 
@@ -134,6 +153,7 @@
             </div>
         </div>
     </footer>
+    <script src="resources/JS/main.js"></script>
 </body>
 
 </html>
