--- a/front-end/productos/productos.html
+++ b/front-end/productos/productos.html
@@ -41,7 +41,7 @@
         <!-- Navbar links -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="row w-100">
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="../productos/productos.html">Productos</a>
@@ -55,7 +55,7 @@
                     </ul>
                 </div>
 
-                <div class="col-md-5 ">
+                <div class="col-md-4 ">
                     <form class="form-inline text-right ">
                         <input class="form-control" type="text" placeholder="Buscar productos...">
                         <button class="btn" type="button"><i class="material-icons">&#xe163;</i></button>
@@ -68,7 +68,9 @@
 
                         </div>
                         <div class="col-1">
-                            <i class="material-icons">&#xe8cc;</i>
+                            <a href="../carrito/carrito.html">
+                                <i class="material-icons">&#xe8cc;</i>
+                            </a>
                         </div>
                     </div>
                 </div>
